# SecUtility.Core

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: coverage.yml  linux.yml  local.yml  macos.yml  windows.yml
SecUtility/Algorithm/: SpectatorReduction.hpp
SecUtility/Collection/: Array.hpp  Bitset.hpp  IndexAccessor.hpp  KeyedArray.hpp  MultidimensionalArray.hpp  RoundRobinOrdering.hpp  SubscriptBasedIterator.hpp  TypeTuple.hpp
SecUtility/Collection/Detail/: Bitset.Base.hpp  Bitset.Forward.hpp  Bitset.Impl.hpp  Bitset.Utility.hpp  BitsetBase.hpp
SecUtility/Diagnostic/: Exception.hpp  Stopwatch.hpp  TypeName.hpp  Unreachable.hpp
SecUtility/Diagnostic/Exception/: Exception.hpp
SecUtility/IO/: AbstractFile.hpp  BitOrder.hpp
SecUtility/Macro/: ConstevalIf.hpp  ForceInline.hpp  Stringify.hpp
SecUtility/Math/: Complex.hpp  Constant.hpp  ContinuedFraction.hpp  Core.hpp  HornerPolynomial.hpp  IsScalar.hpp  KahanSummation.hpp  LinearOperatorBase.hpp  MatrixFreeLinearOperator.hpp  OrthogonalPolynomial.hpp  Orthonormalization.hpp  QuadratureGrid.hpp  Regin.hpp  RotationOfPointsInThePlane.hpp  Search.hpp  SelfAdjointJacobiEigenSolver.hpp  Special.hpp  StructuredMatrix.hpp
SecUtility/Math/Special/: Boys.hpp  ClebschGordan.hpp  Common.hpp  Digamma.hpp  ExpIntegral.hpp  Factorial.hpp  Gamma.hpp  HarmonicNumber.hpp  PascalTriangle.hpp
SecUtility/Meta/: Constant.hpp  Identity.hpp  IntegerSequence.hpp  NttpArray.hpp  OverloadSet.hpp  ParameterPackUtility.hpp  StaticForeach.hpp  TypeTrait.hpp
SecUtility/Misc/: BindFunctional.hpp  Bitflag.hpp  CachedFunction.hpp  Checksum.hpp  Endian.hpp  Enum.hpp  NullMixin.hpp  NullMutex.hpp  Prefetch.hpp  Random.hpp  RefCountedString.hpp
SecUtility/Raw/: Array.hpp  Float.hpp  Int.hpp  LRef.hpp  Ptr.hpp  RRef.hpp
SecUtility/Text/: CaseConversion.hpp  Comparison.hpp  Conversion.hpp  Split.hpp  Symbol.hpp
SecUtility/Threading/: ThreadPool.hpp
cmake/: PatchIfNeeded.cmake
patches/gcem/: CMakeLists.txt.patch
patches/gcem/include/gcem_incl/: erf.hpp.patch
patches/range-v3/include/range/v3/view/: slice.hpp.patch  zip_with.hpp.patch
scripts/: act-local.sh
tests/: BitflagTest.cpp  BitsetTest.cpp  CMakeLists.txt  CachedFunctionTest.cpp  ChecksumTest.cpp  CollectionTest.cpp  ExceptionTest.cpp  FunctionTraitsTest.cpp  IdentityTest.cpp  IndexAccessorTest.cpp  IntegerSequenceTest.cpp  KeyedArrayTest.cpp  MacroTest.cpp  MathCompensatedSummationTest.cpp  MathComplexTest.cpp  MathContinuedFractionTest.cpp  MathCoreTest.cpp  MathHornerPolynomialTest.cpp  MathKahanSummationTest.cpp  MathMatrixFreeLinearOperatorTest.cpp  MathOrthogonalPolynomialTest.cpp  MathOrthonormalizationTest.cpp  MathQuadratureTest.cpp  MathReginTest.cpp  MathSearchTest.cpp  MathSelfAdjointJacobiDiagonalizerTest.cpp  MathSpecialTest.cpp  MathStructuredMatrixTest.cpp  MiscSmokeTest.cpp  MiscTest.cpp  MultidimensionalArrayTest.cpp  NttpArrayTest.cpp  ParameterPackUtilityTest.cpp  RandomTest.cpp  RoundRobinOrderingGeneratorTest.cpp  StaticForeachTest.cpp  StopwatchTest.cpp  TextTest.cpp  ThreadPoolTest.cpp  TypeNameTest.cpp  (+1 more)
